@@ -53,14 +53,16 @@
           <target>17</target>
         </configuration>
       </plugin>
+
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
-        <version>2.19.1</version>
         <configuration>
-          <testFailureIgnore>true</testFailureIgnore>
+          <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+          <testFailureIgnore>false</testFailureIgnore>
         </configuration>
       </plugin>
+
       <plugin>
         <groupId>org.jacoco</groupId>
         <artifactId>jacoco-maven-plugin</artifactId>
@@ -80,6 +82,7 @@
           </execution>
         </executions>
       </plugin>
+
     </plugins>
   </build>
 </project>
